--- a/roles/apache/templates/apache_config.j2
+++ b/roles/apache/templates/apache_config.j2
@@ -1,5 +1,7 @@
 <VirtualHost *:80>
 ServerName {{ server_name }}
+# The below line turns on serving Passenger errors to the web. Turn off in production
+PassengerFriendlyErrorPages on
 # !!! Be sure to point DocumentRoot to 'public'!
 DocumentRoot {{ druw_home }}/public
 # allows forward slashes for IIIF
