Update to hyrax2 alpha base

--- a/roles/postgresql/templates/pg_hba.conf.j2
+++ b/roles/postgresql/templates/pg_hba.conf.j2
@@ -75,6 +75,7 @@
 
 
 # TYPE  DATABASE        USER            ADDRESS                 METHOD
+host   fcrepodb2    fcrepouser    127.0.0.1/32          trust
 host   {{ db_name }}    {{ db_user }}    127.0.0.1/32          trust
 
 # "local" is for Unix domain socket connections only
