--- a/roles/fedora/templates/tomcat.conf.j2
+++ b/roles/fedora/templates/tomcat.conf.j2
@@ -9,7 +9,7 @@ TOMCATS_BASE="/var/lib/tomcats/"
 JAVA_HOME="/usr/lib/jvm/jre"
 
 # Where your tomcat installation lives
-CATALINA_HOME={{ tomcat }}
+CATALINA_HOME=/usr/share/tomcat
 
 # System-wide tmp
 CATALINA_TMPDIR="/var/cache/tomcat/temp"
@@ -21,5 +21,5 @@ CATALINA_TMPDIR="/var/cache/tomcat/temp"
 SECURITY_MANAGER="false"
 
 # tomcat settings for hydra (Fedora and Solr 4.x)
-CATALINA_OPTS="-Dfcrepo.modeshape.configuration=classpath:/config/file-simple/repository.json -Djava.awt.headless=true -XX:+UseG1GC -XX:+UseCompressedOops -XX:-UseLargePagesIndividualAllocation -XX:MaxPermSize=128M -Xms512m -Xmx4096m -Djava.util.logging.config.file={{ tomcat }}/log4j.properties -server"
+CATALINA_OPTS="-Dfcrepo.modeshape.configuration=classpath:/config/file-simple/repository.json -Dfcrepo.home={{ fedora_data_dir }} -Djava.awt.headless=true -XX:+UseG1GC -XX:+UseCompressedOops -XX:-UseLargePagesIndividualAllocation -XX:MaxPermSize=128M -Xms512m -Xmx4096m -Djava.util.logging.config.file=/etc/tomcat/log4j.properties -server"
 
